--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,12 @@
 
 body {
     background-color: #00294b;
+    background-image: url("/assets/gifs-de-dinheiro-voando-15.gif");
+    
+   
 }
+
+
 
 .logo {
     width: 365px;
