--- a/styles.css
+++ b/styles.css
@@ -9,9 +9,12 @@
 body {
     background-color: #00294b;
     background-image: url("/assets/gifs-de-dinheiro-voando-15.gif");
+    background-repeat: repeat-x;
+    background-position-y: center;
 }
+
 .logo {
-    width: 327px;
+    width: 285px;
     display: block;
     margin-left: auto;
     margin-right: auto;
